--- a/core/templates/dashboard/super_owner/dashboard.html
+++ b/core/templates/dashboard/super_owner/dashboard.html
@@ -72,6 +72,11 @@
       </a>
     </div>
     <div class="col-lg-2 col-md-4 col-sm-6">
+      <a href="{% url 'super_owner_owners' %}" class="qa btn btn-light w-100">
+        <i class="bi bi-people"></i><span>إدارة الملاك</span>
+      </a>
+    </div>
+    <div class="col-lg-2 col-md-4 col-sm-6">
       <a href="{% url 'super_owner_products' %}" class="qa btn btn-light w-100">
         <i class="bi bi-box-seam"></i><span>إدارة المنتجات</span>
       </a>
